<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/keyword_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/keyword"
        android:text="@string/keyword"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <EditText
        android:id="@+id/keyword"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_keywords"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword_label" />

    <TextView
        android:id="@+id/keyword_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyword_error"
        android:textColor="#ff0000"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/price_range"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword" />

    <EditText
        android:id="@+id/min_price"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:ems="10"
        android:hint="@string/min_price"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_label" />

    <EditText
        android:id="@+id/max_price"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/max_price"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/min_price"
        app:layout_constraintTop_toBottomOf="@+id/price_label" />

    <TextView
        android:id="@+id/price_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_error"
        android:textColor="#ff0000"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_price" />

    <TextView
        android:id="@+id/condition_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/condition"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_price" />

    <CheckBox
        android:id="@+id/condition_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/condition_new"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_label" />

    <CheckBox
        android:id="@+id/condition_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/condition_used"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/condition_new"
        app:layout_constraintTop_toBottomOf="@+id/condition_label" />

    <CheckBox
        android:id="@+id/condition_unspecified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/condition_unspecified"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/condition_used"
        app:layout_constraintTop_toBottomOf="@+id/condition_label" />

    <TextView
        android:id="@+id/sort_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sort_order"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_new" />

    <Spinner
        android:id="@+id/sort"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:entries="@array/sort_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_label" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:width="150dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:width="150dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort" />

</androidx.constraintlayout.widget.ConstraintLayout>